Fix header z-index

--- a/apps/web/app/layout.module.css
+++ b/apps/web/app/layout.module.css
@@ -9,7 +9,7 @@
   position: sticky;
   align-items: center;
   background-color: var(--color-background);
-  z-index: 1;
+  z-index: 2;
 }
 
 .title {
